# BarbiesLoveDetective

./: CMakeLists.txt  README.md
include/: gemini.h  ia.h  jogo.h  menu.h  personagens.h  pistas.h
sources/: gemini.c  ia.c  jogo.c  main.c  menu.c  personagens.c  pistas.c
